--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ backend/target/
 backend/!.mvn/wrapper/maven-wrapper.jar
 backend/!**/src/main/**/target/
 backend/!**/src/test/**/target/
-.metadata
+backend/.metadata
 
 ### STS ###
 backend/.apt_generated
